--- a/.user.project.json
+++ b/.user.project.json
@@ -2,7 +2,48 @@
   "run": [
     {
       "filePath": "/ETIME_APPR/index.html",
+      "previewMode": 1,
+      "dataMode": 1,
+      "workspace": "withoutWorkspace",
+      "ui5ActiveVersion": null,
+      "ui5VerSource": null,
+      "isDefaultVersion": 0,
+      "urlParameters": [
+        {
+          "paramName": "sap-ui-debug",
+          "paramValue": "true",
+          "paramActive": true
+        },
+        {
+          "paramName": "",
+          "paramValue": "",
+          "paramActive": false
+        }
+      ],
+      "_metadata": {
+        "id": 6841366,
+        "runnerId": "webapprunner",
+        "displayName": "Manager Approvals (sap-ui-debug=true)"
+      }
+    },
+    {
+      "filePath": "/ETIME_APPR/Component.js",
       "previewMode": 0,
+      "dataMode": 1,
+      "workspace": "withoutWorkspace",
+      "ui5ActiveVersion": null,
+      "ui5VerSource": null,
+      "isDefaultVersion": 0,
+      "urlParameters": [],
+      "_metadata": {
+        "runnerId": "fiorirunner",
+        "id": 8991134,
+        "displayName": "New SAP Fiori Component on Sandbox 2"
+      }
+    },
+    {
+      "filePath": "/ETIME_APPR/index.html",
+      "previewMode": 1,
       "dataMode": 1,
       "workspace": "withoutWorkspace",
       "ui5ActiveVersion": null,
@@ -21,24 +62,9 @@
         }
       ],
       "_metadata": {
-        "id": 6841366,
-        "runnerId": "webapprunner",
-        "displayName": "New Web Application 2"
-      }
-    },
-    {
-      "filePath": "/ETIME_MGR_MMDD/index.html",
-      "previewMode": 0,
-      "dataMode": 1,
-      "workspace": "withoutWorkspace",
-      "ui5ActiveVersion": null,
-      "ui5VerSource": null,
-      "isDefaultVersion": 0,
-      "urlParameters": [],
-      "_metadata": {
-        "runnerId": "webapprunner",
         "id": 5906366,
-        "displayName": "New Web Application 7"
+        "runnerId": "webapprunner",
+        "displayName": "Manager Approvals"
       }
     }
   ]
